--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ textarea::-webkit-scrollbar {
 }
   
 textarea::-webkit-scrollbar-track {
-    background-color: rgb(2, 48, 21);
+    background-color: rgba(255, 255, 255, 0.183);
 }
   
 textarea::-webkit-scrollbar-thumb {
